[package]
name = "nearnft"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# create a dynamic library and asks it to install the dependency or near-sdk
\[lib\]

crate-type = \["cdylib", "rlib"\]

\[dependencies\]

near-sdk = "3.1.0"
